--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <li><a href="#name">About Me</a></li>
         <li><a href="#Resume">Resume</a></li>
         <li><a href="#Projects">Projects</a></li>
-        <li>Contact</li>
+        <li><a href="#Contact">Contact</a></li>
 
     </ul>
 
@@ -68,6 +68,15 @@
 
         </p>
 
+
+
+    </section>
+
+    <!-- 3rd section -->
+    <section id ="Resume">
+
+        <h3 class="res"><a href="./resources/images/Resume 2020-1.pdf"
+        target="_blank">Resume</a></h3>
 
 
     </section>
