--- a/index.html
+++ b/index.html
@@ -46,13 +46,14 @@
     
     <!-- Summ -->
 
-        
+    <div class="container-sm">
             <p class="aboutme">This page is dedicated to helping you get a better
                 understanding of who I am as a professional, and as
                 a potential candidate for your company's team. I built
                 this page using HTML, CSS, and Visual Studio Code
                 text editor. 
             </p>
+            </div>
         </section>
 
     <!-- 2nd section  -->
