--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     
     <!-- Summ -->
 
-    <div class="container-sm">
+    <div class="container-xl">
             <p class="aboutme">This page is dedicated to helping you get a better
                 understanding of who I am as a professional, and as
                 a potential candidate for your company's team. I built
