--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
 </head>
 
 
-<body>
+<body class="container-fluid">
 
     
 
-   <div class="container-fluid">
+   <div>
     <!-- 1st section -->
     <section id="onesec">
 
