--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
 
        
 
-
+<div class=".col-">
 <div class="top-content">
     <div class="container">
         <!-- Title and description row -->
@@ -157,6 +157,7 @@
     </div>
 </div>
 
+</div>
        
 
 
