--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
 
        
 
-<div class=".col-">
-    <div class="top-content"> </div>
+
+    <div class="top-content"> 
         <div class="container">
             <!-- Title and description row -->
             <div class="row">
