--- a/index.html
+++ b/index.html
@@ -182,7 +182,12 @@
         <a href="https://www.instagram.com/groc_s/" target="_blank"
         class="fa fa-instagram"></a>
 
+    </div>
+
+
         <!-- gmail -->
+
+    <div class=".col-">
         <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=lcplusmc.gs@gmail.com&body=my-text" 
         target="_blank" 
         class="fa fa-google"></a>
