--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         <p class="projD">
 
    Here are some projects I have done in team settings, which took place in a few of
-   my courses I have taken while in the Electronincs Engineeering program
+   my courses I have taken while in the Electronics Engineeering program
    at CSULB. Two projects display DAQ application, and LabView VI programming. The 
    autonomous vehicle project displays C/C++ programming uses, while also demonstrating
    sensor applications.  
@@ -223,9 +223,11 @@
 
         <div class="col-6">
 
-            <a href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=lcplusmc.gs@gmail.com&body=my-text" 
+            <a href="mailto:lcplusmc.gs@gmail.com" 
             target="_blank" 
             class="fa fa-google"></a>
+
+            
         </div>  
     
     </div>
