--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
         
         <!-- will be linked in -->
         <div class="col-3">
-            <a href="#" target="_blank"
+            <a href="https://www.linkedin.com/in/george-suarez-29a5b41b3" target="_blank"
             class="fa fa-linkedin"></a>
         </div>
     
