--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         
         <li><a href="#name">About Me</a></li>
         <li><a href="#Projects">Projects</a></li>
-        <li><a href="./resources/images/Resume 2020-1.pdf" 
+        <li><a href="./resources/images/NEW RESUME 21.pdf" 
             target="_blank">Resume</a></li>
         <li><a href="#Contact">Contact</a></li>
 
