--- a/index.html
+++ b/index.html
@@ -209,8 +209,8 @@
 
         <div class="col-3">
          
-        <a href="https://www.instagram.com/groc_s/" target="_blank"
-        class="fa fa-instagram"></a>
+        <a href="https://github.com/gsuarez90" target="_blank"
+        class="fa fa-github-square"></a>
 
         
         </div>
