--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 
         <div class="col-3">
          
-        <a href="https://github.com/gsuarez90" target="_blank"
+        <a href="https://github.com/gsuarez90/eventLog.git" target="_blank"
         class="fa fa-github-square"></a>
 
         
