--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
         <p class="projD">
 
    Here are some projects I have done in team settings, which took place in a few 
-   courses I have taken while in the Electronics Engineeering program
+   courses I have taken while in the Electronics Engineeering Technology program
    at CSULB. Two projects display DAQ application, and LabView VI programming. The 
    autonomous vehicle project displays C/C++ programming uses, while also demonstrating
    sensor applications.  
