--- a/index.html
+++ b/index.html
@@ -32,13 +32,37 @@
         
         <li><a href="#name">About Me</a></li>
         <li><a href="#Projects">Projects</a></li>
-        <li><a href="./resources/images/resume_21_g.pdf" 
-            target="_blank">Resume</a></li>
+        <li><a data-target="#myModal" data-toggle="modal">Resume</a></li>
         <li><a href="#Contact">Contact</a></li>
 
     </ul>
 
+    <!-- The Modal -->
 
+    <div class="modal" id="myModal" style="display: none;" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+
+            <!-- Modal Header -->
+            <div class="modal-header">
+            <h4 class="modal-title">Please Enter Valid Organization Email</h4>
+            <button type="button" class="close" data-dismiss="modal">×</button>
+            </div>
+
+            <!-- Modal body -->
+            <div class="modal-body">
+            Modal body text goes here.
+            </div>
+
+            <!-- Modal footer -->
+            <div class="modal-footer">
+            <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+            </div>
+
+        </div>
+     </div>
+   </div>
+     
 
 
 
