--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 
             <!-- Modal Header -->
             <div class="modal-header">
-            <h4 class="modal-title">Please Enter Valid Organization Email</h4>
+            <h4 class="modal-title">Please enter a valid work e-mail</h4>
             <button type="button" class="close" data-dismiss="modal">×</button>
             </div>
 
