editing page text
updated some about me section

--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
    Here are some projects I have done in team settings, which took place in a few 
    courses I have taken while in the Electronics Engineeering Technology program
    at CSULB. Two projects display DAQ application, and LabView VI programming. The 
-   autonomous vehicle project displays C/C++ programming uses, while also demonstrating
+   autonomous vehicle project displays Arduino C++ programming uses, while also demonstrating
    sensor applications.  
   
    <br>
