--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
 
 <!-- Include js file -->    
-<script src="script.js"></script>
+<script src="javascrill.js"></script>
 
   
      <!-- 1st section -->
