--- a/index.html
+++ b/index.html
@@ -83,11 +83,11 @@
         <div class="row">   
             <div class="col-">
     
-            <p class="aboutme">This page is dedicated to helping you get a better
-                understanding of who I am as a professional, and as
-                a potential candidate for your company's team. I built
-                this page using HTML, CSS, and Visual Studio Code
-                text editor. 
+            <p class="aboutme">This page is dedicated to displaying some hobbies/projects
+                I have taken interest in as a regular person outside of a professional setting, and to show how those interest/skills could align with
+                a potential candidacy for your company's team. I built
+                this page using HTML, CSS, and Javascript using Visual Studio Code
+                text editor.
             </p>
             </div>
         </div>
